# lib/db/src/schema/index.ts
@@ -1,3 +1,5 @@
 export * from "./nodes";
 export * from "./notes";
 export * from "./progress";
+export * from "./users";
+export * from "./exercises";
